syntax = "proto3";

package carauction.carauction;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "carauction/carauction/params.proto";
import "carauction/carauction/system_info.proto";
import "carauction/carauction/stored_auction.proto";
import "carauction/carauction/stored_bid.proto";

option go_package = "car-auction/x/carauction/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/car-auction/carauction/params";
  
  }
  
  // Queries a SystemInfo by index.
  rpc SystemInfo (QueryGetSystemInfoRequest) returns (QueryGetSystemInfoResponse) {
    option (google.api.http).get = "/car-auction/carauction/system_info";
  
  }
  
  // Queries a list of StoredAuction items.
  rpc StoredAuction    (QueryGetStoredAuctionRequest) returns (QueryGetStoredAuctionResponse) {
    option (google.api.http).get = "/car-auction/carauction/stored_auction/{index}";
  
  }
  rpc StoredAuctionAll (QueryAllStoredAuctionRequest) returns (QueryAllStoredAuctionResponse) {
    option (google.api.http).get = "/car-auction/carauction/stored_auction";
  
  }
  
  // Queries a list of StoredBid items.
  rpc StoredBid    (QueryGetStoredBidRequest) returns (QueryGetStoredBidResponse) {
    option (google.api.http).get = "/car-auction/carauction/stored_bid/{index}";
  
  }
  rpc StoredBidAll (QueryAllStoredBidRequest) returns (QueryAllStoredBidResponse) {
    option (google.api.http).get = "/car-auction/carauction/stored_bid";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetSystemInfoRequest {}

message QueryGetSystemInfoResponse {
  SystemInfo SystemInfo = 1 [(gogoproto.nullable) = false];
}

message QueryGetStoredAuctionRequest {
  string index = 1;
}

message QueryGetStoredAuctionResponse {
  StoredAuction storedAuction = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredAuctionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredAuctionResponse {
  repeated StoredAuction                          storedAuction = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination    = 2;
}

message QueryGetStoredBidRequest {
  string index = 1;
}

message QueryGetStoredBidResponse {
  StoredBid storedBid = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredBidRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredBidResponse {
  repeated StoredBid                              storedBid  = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

